k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imeetpro-prod
  labels:
    app: imeetpro
    environment: prod
