k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imeetpro-ingress
  namespace: imeetpro-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:664418964913:certificate/f4063e20-2e47-4a91-b514-ecaefcf4ccc6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - host: imeetpro.lancieretech.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: imeetpro-backend-svc
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: imeetpro-backend-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imeetpro-frontend-svc
                port:
                  number: 80
